# medical-center

./: README.md  app.py  config.py  pyproject.toml  reset.py
controllers/: rdv_controller.py
models/: patient_model.py  rdv_model.py
static/css/: style.css
templates/: index.html  rdv_form.html  rdv_list.html
